--- a/playbook-wilson-test-ansible.yaml
+++ b/playbook-wilson-test-ansible.yaml
@@ -19,6 +19,13 @@
       yum:
         name='docker'
         state=latest
+    - name: pull docker image
+      docker_image: 
+        name: nyuwilson/wilson:jenkinsdockerpush 
+
+    - name: stop all docker containers
+      shell: docker stop $(docker ps -a -q)
+      ignore_errors: true
 
     - name: service docker
       service:
