--- a/playbook-wilson-test-ansible.yaml
+++ b/playbook-wilson-test-ansible.yaml
@@ -9,6 +9,17 @@
 
     #- name: install docker-py
     #  pip: name=docker-py
+    - apt:
+      state: latest
+      name: python-pip
+
+    - pip:
+        name:
+          - docker
+          - requests>=2.20.1
+
+    - docker_image:
+      name: traefik
 
     - name: configure / Update yum packages
       yum:
