--- a/playbook-wilson-test-ansible.yaml
+++ b/playbook-wilson-test-ansible.yaml
@@ -15,9 +15,9 @@
         name='docker'
         state=latest
         
-    - name: pull docker image
-      docker_image: 
-        name: nyuwilson/wilson:jenkinsdockerpush 
+    #- name: pull docker image
+    #  docker_image: 
+    #    name: nyuwilson/wilson:jenkinsdockerpush 
 
     - name: stop all docker containers
       shell: docker stop $(docker ps -a -q)
