--- a/playbook-wilson-test-ansible.yaml
+++ b/playbook-wilson-test-ansible.yaml
@@ -4,20 +4,26 @@
   become: yes
   become_method: sudo
   tasks:
-    #- name: Install pip
-    #  apt: name=python-pip state=present
+#    - name: Install pip
+#      apt: name=python-pip state=present
 
-    #- name: install docker-py
-    #  pip: name=docker-py
+#    - name: install docker-py
+#      pip: name=docker-py
+    - name: configure / Update yum packages
+      yum:
+        name: '*'
+        state: latest
+        update_cache: yes
 
     - name: install docker
       yum:
         name='docker'
         state=latest
-        
+
     - name: pull docker image
       docker_image: 
         name: nyuwilson/wilson:jenkinsdockerpush 
+        source: pull
 
     - name: stop all docker containers
       shell: docker stop $(docker ps -a -q)
@@ -34,7 +40,7 @@
         name: nyuwilson
         image: nyuwilson/wilson:jenkinsdockerpush
         ports:
-          - "8080:80"
+          - "80:80"
 
 #    - name: Builder Docker image from DockerFile
 #      docker_image:
